--- a/.eslintignore
+++ b/.eslintignore
@@ -7,5 +7,13 @@
 .contentlayer
 .vercel
 .env.local
-.env.sample
+.env.example
 .env.test
+
+# Auto Generated PWA files
+**/public/sw.js
+**/public/workbox-*.js
+**/public/worker-*.js
+**/public/sw.js.map
+**/public/workbox-*.js.map
+**/public/worker-*.js.map
