--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 	"dependencies": {
 		"@headlessui/react": "^1.7.17",
 		"next": "13.4.19",
+		"next-pwa": "^5.6.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-icons": "^4.11.0"
