--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
 		"next-pwa": "^5.6.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"react-icons": "^4.11.0"
+		"react-icons": "^4.11.0",
+		"validator": "^13.11.0"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^17.7.2",
