chore: add metadata and new favicon pack for seo

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "homepage",
 	"version": "0.1.0",
-	"description": "Chain Rule Homepage",
+	"description": "We partner with founders to build and ship secure, robust DeFi products across multiple blockchains.",
 	"author": "Chain Rule, LLC",
 	"license": "MIT",
 	"repository": {
