--- a/package.json
+++ b/package.json
@@ -30,16 +30,16 @@
 	},
 	"dependencies": {
 		"@headlessui/react": "^1.7.17",
-		"next": "13.4.19",
+		"next": "^14.0.3",
 		"next-pwa": "^5.6.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"react-icons": "^4.11.0",
-		"validator": "^13.11.0"
+		"react-icons": "^4.11.0"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^17.7.2",
 		"@commitlint/config-conventional": "^17.7.0",
+		"@next/eslint-plugin-next": "^14.0.3",
 		"@types/node": "20.6.0",
 		"@types/react": "18.2.21",
 		"@types/react-dom": "18.2.7",
